loro/test/valid/indep/fixed/00004.loro
algoritmo _00004 para PRUEBA() 
estrategia ""
inicio
	arreglo: []entero := crear [10]entero;
	arreglo[-11] := 0;
fin algoritmo
